# xdg-desktop-portal-demo

./: .gitignore  CMakeLists.txt  install_dep_skip.list  linglong.yaml
src/: CMakeLists.txt  main.cpp  portaldemo.cpp  portaldemo.h  xdgexporterv2.cpp  xdgexporterv2.h
